Refactored keycloak adapter to user RestClient instead of RestTemplate and request/response models from openAPI of keycloak. Fixed existing tests and added new ones for business layer services.